Cleaning up markup for TOC

--- a/lib/jade/docs/3.x/ui/alerts/index.jade
+++ b/lib/jade/docs/3.x/ui/alerts/index.jade
@@ -9,7 +9,7 @@ block basic
 
   .example
     .alert
-      h1 Attention
+      h1.toc-exempt Attention
       p You need to change your password
       button.button Change Password
 
@@ -39,7 +39,7 @@ block basic
         p Careful!
     .col-third
       .alert.alert-error
-        h1 Last command did not work
+        h1.toc-exempt Last command did not work
         p Please try again.
     .col-third
       .alert
@@ -47,4 +47,3 @@ block basic
         label.checkbox
           input(type="checkbox")
           | I agree to the terms and conditions
-
