--- a/lib/jade/docs/3.x/ui/images/index.jade
+++ b/lib/jade/docs/3.x/ui/images/index.jade
@@ -33,17 +33,17 @@ block basic
           .thumbnail {
             @include thumbnail();
           }
-  
+
   h2 Thumbnail Content
   .thumbnail-content
     img(src="/img/mountains.png" style="width: 150px;height: 150px")
     article
-      h1 Imagine living among the mountains
+      h1.toc-exempt Imagine living among the mountains
       p In one of our gorgeous luxury timeshare condominiums, finally this dream can become a reality!
 
   .thumbnail-content
     article
-      h1 Imagine living among the mountains
+      h1.toc-exempt Imagine living among the mountains
       p In one of our gorgeous luxury timeshare condominiums, finally this dream can become a reality!
     img(src="/img/mountains.png" style="width: 150px;height: 150px")
 
