--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -83,7 +83,8 @@ block basic
           }
 
 block variations
-  <h3 id="primary-secondary">Primary and secondary menus</h3>
+  h2 Primary and secondary menus
+
   :markdown
     The first `ul` is automatically left aligned. Adding another will treat the
     second as a secondary menu and align it right. Adding more than two `ul`s
