--- a/lib/jade/docs/3.x/ui/typography/index.jade
+++ b/lib/jade/docs/3.x/ui/typography/index.jade
@@ -66,7 +66,7 @@ block variations
     p The first step to cooking a pie is to choose a fancy tin.
 
     :markdown
-      ### Code
+      <h3 class="toc-exempt">Code</h3>
 
           <header class="page-heading">
             <h1>How to cook a pie</h1>
@@ -187,12 +187,12 @@ block variations
     a notch and elements tend to be centered.
 
   .hero
-    h1 Thanks for visiting.
+    h1.toc-exempt Thanks for visiting.
 
     .thumbnail-content(style="width: 80%")
       img(src="/img/mountains.png" style="width: 150px;height: 150px;")
       article
-        h1 Don't to forget to check out the slopes
+        h1.toc-exempt Don't to forget to check out the slopes
         p You won't regret it.
 
   :markdown
