--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -8,6 +8,11 @@
   vertical-align: middle
   user-select: none
 
+  &[disabled], &:disabled
+    color: rgba(0, 0, 0, 0.25)
+    pointer-events: none
+    // TODO: Cursor disabled?
+
   &.with-submenu
     position: relative
 
@@ -123,17 +128,17 @@
       text-decoration: inherit
       vertical-align: top
 
-    &:not(:first-child):not(:last-child)
+    &:not(:first-child):not(:last-child):not(:only-child)
       > a, > button, > input
         border-radius: 0
         border-left: 0
 
-    &:first-child
+    &:first-child:not(:only-child)
       > a, > button, > input
         border-top-right-radius: 0
         border-bottom-right-radius: 0
 
-    &:last-child
+    &:last-child:not(:only-child)
       > a, > button, > input
         border-top-left-radius: 0
         border-bottom-left-radius: 0
