--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -123,7 +123,7 @@
       text-decoration: inherit
       vertical-align: top
 
-    &:not(:first-child):not(:last-child)
+    &:not(:first-child):not(:last-child):not(:only-child)
       > a, > button, > input
         border-radius: 0
         border-left: 0
