--- a/rails/app/assets/stylesheets/kickstart_rails/core/_base_components.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_base_components.sass
@@ -1,8 +1,6 @@
-// 
 // Base Components
 // ===============
 // These are the base components from which dependent components can extend.
-//
 
 // Components
 @import ../components/_alerts
@@ -11,7 +9,7 @@
 @import ../components/_images
 @import ../components/_labels
 @import ../components/_modals
-@import ../components/_nav
 @import ../components/_progress
 @import ../components/_tables
 @import ../components/_dropdown_menu
+@import ../components/_navbar
