--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -244,6 +244,12 @@ hr
 =modal()
   +modal-default()
 
+// Pagination
+// ----------
+
+=pagination($background: map-get($white, darker))
+  +pagination-default($background)
+
 // Tooltips
 // --------
 
