Scratching the surface on finishing navbars

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -10,6 +10,10 @@
 
     ul
       li
+        a(href="http://kickstart-store.com") 
+          span.fa.fa-cubes
+          | Store
+      li
         a.button.button-primary(href="/docs/#{docsVersion}/" role="button")
           span.fa.fa-cloud-download
           |  Download
