--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -1,12 +1,33 @@
 doctype html
 html(lang='en')
   head
-    // TODO: Link to mocha and chai
+
+    link(rel="stylesheet" href="/css/kickstart.css")
     script(src="../../node_modules/mocha/mocha.js")
     script(src="../../node_modules/chai/chai.js")
 
   body
-    h1 Tests
+    h1 CSS Tests
+
+    .navbar
+      nav
+        ul
+          li
+            a(href="#") A
+          li
+            a(href="#") A
+          li
+            a(href="#") A
+        ul
+          li
+            a(href="#") A
+          li
+            a(href="#") A
+          li
+            a(href="#") A
+
+
+    h1 JavaScript Tests
 
     .navbar#test-nav
       nav
