--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -196,7 +196,7 @@ hr
 // Navigation
 // ----------
 
-=navbar($fluid: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+=navbar($fluid: true, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   +navbar-default($fluid, $background, $breakpoint, $collapse)
 
 =dropdown_menu
