--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -163,8 +163,8 @@ html
 // Buttons
 // -------
 
-=button($color: map-get($white, dark), $size: 1)
-  +button-default($color, $size)
+=button($background-color: map-get($white, dark), $size: 1)
+  +button-default($background-color, $size)
 
 =button-group($color: map-get($white, dark), $size: 1)
   +button-group-default($color, $size)
