--- a/rails/app/assets/stylesheets/kickstart_rails/components/_navbar.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_navbar.sass
@@ -4,7 +4,7 @@
   @else
     color: rgba(0, 0, 0, 0.5)
 
-=navbar-default($fluid: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+=navbar-default($fluid: true, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   background: $background
   box-shadow: 0px 1px 0px darken($background, 12%) inset
   font-size: $default-font-size
@@ -14,7 +14,7 @@
     @if $fluid == true
       +container(true)
     @else
-      +container
+      +container(false)
     width: 100%
     border-radius: 0
     position: relative
