--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -163,8 +163,8 @@ html
 // Buttons
 // -------
 
-=button($color: map-get($white, dark), $size: 1)
-  +button-default($color, $size)
+=button($background-color: map-get($white, dark), $size: 1)
+  +button-default($background-color, $size)
 
 =button-group($color: map-get($white, dark), $size: 1)
   +button-group-default($color, $size)
@@ -196,7 +196,7 @@ hr
 // Navigation
 // ----------
 
-=navbar($fluid: false, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+=navbar($fluid: true, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   +navbar-default($fluid, $background, $breakpoint, $collapse)
 
 =dropdown_menu
