--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -209,6 +209,10 @@ footer.main
   @media screen and (min-width: $tablet)
     display: inherit
 
+// Tables
+table
+  +table
+
 // HOME PAGE
 .first-pitch, .second-pitch, .third-pitch
   +row
