Changing button styling

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -89,6 +89,11 @@ html(lang='en')
             a(href="#") Take a picture
 
 
+    .screencap(style="padding: 75px")
+      // Designated for doing screencaps
+      button.signup Sign up
+
+
     footer
       script.
         mocha.setup('bdd');
