--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -6,7 +6,7 @@
 //  classes for all the components.
 
 // Import the semantic index
-@import kickstart-semantic
+@import themes/_default
 
 // Generate color classes (This is as close as I can get to being dry.)
 =color-classes($prefix, $background-color: false, $color: false)
