--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -23,15 +23,17 @@ block hero-example
         li
           a.button(href="#" role="button") Signup
 
-  .breadcrumbs
-    ul
-      li: a(href="#") Products
-      li: a(href="#") Home and Garden
-      li Rake
-
   .pagination
     ul
       li: a(href="#") &laquo; Prev
+
+    ul
+      li: a(href="#") 1
+      li: a(href="#") 2
+      li: a(href="#") 3
+      li: a(href="#") 4
+      li: a(href="#") 5
+
     ul
       li: a(href="#") Next &raquo;
 
@@ -82,8 +84,50 @@ block basic
             @include navbar();
           }
 
+  :markdown
+    ## Pagination
+
+    Pagination styling is very similar to the navigation bar. As such, the
+    markup is also very similar and
+    <span class="ifnot-semantic">a <code>.pagination-dark</code> class is available.</span>
+    <span class="if-semantic">a <code>$background-color</code> can be passed in to <code>pagination()</code></span>.
+
+  .example
+    .pagination
+      ul
+        li: a(href="#") &laquo; Prev
+      ul
+        li: a(href="#") Next &raquo;
+
+  :markdown
+    <span>
+
+        <div class="pagination">
+          <ul>
+            <li>
+              <a href="#">&laquo; Prev</a>
+            </li>
+            <li>
+              <a href="#">Next &raquo;</a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- laquo/raquo stand for "left and right angle quotes" -->
+
+  .if-semantic
+    :markdown
+      <span>
+
+          .pagination {
+            @include pagination();
+          }
+
+
 block variations
-  h2 Primary and secondary menus
+  h2 Bars
+
+  h3 Primary and secondary menus
 
   :markdown
     The first `ul` is automatically left aligned. Adding another will treat the
@@ -138,7 +182,7 @@ block variations
 
   :markdown
 
-    ### About the structure
+    #### About the structure
 
     Why not just have `<nav>`? This is to give you more separation between the
     flexbox elements and the container it sits in. Flexbox display settings will
@@ -298,8 +342,7 @@ block variations
 
         k$.navbar('.navbar')
 
-
-    ## Coloring navbar
+    ### Coloring navbar
 
     Coloring the navbar just means changing the color of the container. However,
     darker colors might mean using lighter colors for the text for better contrast.
@@ -323,122 +366,7 @@ block variations
             <nav>
           </div>
 
-  :markdown
-
-    ### Breadcrumbs
-
-    Breadcrumbs are similar to navigation bars except for minor styling. For this reason,
-    the markup is similar as well.
-
-  .breadcrumbs
-    ul
-      li: a(href="#") Products
-      li: a(href="#") Home and Garden
-      li Rake
-
-  :markdown
-    <span>
-
-        <nav class="breadcrumbs">
-          <ul>
-            <li>
-              <a href="#">Products</a>
-            </li>
-            <li>
-              <a href="#">Home and Garden</a>
-            </li>
-            <li>Rake</li>
-          </ul>
-        </nav>
-
-  .if-semantic
-    :markdown
-      <span>
-
-          .breadcrumbs {
-            @include breadcrumbs();
-          }
-
-  :markdown
-    The last `li` is unstyled to signal the product detail page for "Rake" is the current
-    page they are on.
-
-    ### Dark
-
-    You can also use a darker version of the navbar <span class="if-semantic">or pass in your own color</span>.
-
-  .breadcrumbs-dark
-    ul
-      li: a(href="#") Products
-      li: a(href="#") Home and Garden
-      li Rake
-
-  :markdown
-    <span>
-
-        <nav class="breadcrumbs-dark">
-          <ul>
-            <li>
-              <a href="#">Products</a>
-            </li>
-            <li>
-              <a href="#">Home and Garden</a>
-            </li>
-            <li>Rake</li>
-          </ul>
-        </nav>
-
-  .if-semantic
-    :markdown
-      <span>
-
-          .breadcrumbs-dark {
-            @include breadcrumbs($background-color: #333);
-          }
-
-      As with the navbar, passing in the background color as a parameter
-      insures other color conventions match or oppose as best as the mixin
-      can decide.
-
-  :markdown
-    ### Pagination
-
-    Pagination styling is very similar to the navigation bar. As such, the
-    markup is also very similar and
-    <span class="ifnot-semantic">a <code>.pagination-dark</code> class is available.</span>
-    <span class="if-semantic">a <code>$background-color</code> can be passed in to <code>pagination()</code></span>.
-
-  .example
-    .pagination
-      ul
-        li: a(href="#") &laquo; Prev
-      ul
-        li: a(href="#") Next &raquo;
-
-  :markdown
-    <span>
-
-        <div class="pagination">
-          <ul>
-            <li>
-              <a href="#">&laquo; Prev</a>
-            </li>
-            <li>
-              <a href="#">Next &raquo;</a>
-            </li>
-          </ul>
-        </div>
-
-        <!-- laquo/raquo stand for "left and right angle quotes" -->
-
-  .if-semantic
-    :markdown
-      <span>
-
-          .pagination {
-            @include pagination();
-          }
-
+  h2 Pagination 
   .example
     .pagination
       ul
