--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -209,11 +209,19 @@ footer.main
   @media screen and (min-width: $tablet)
     display: inherit
 
+// Tables
+table
+  +table
+
 // HOME PAGE
 .first-pitch, .second-pitch, .third-pitch
   +row
 
 .first-pitch
+  padding: 
+    top: $space * 2
+    bottom: $space * 2
+
   p
     +p(true)
 
@@ -225,8 +233,9 @@ footer.main
     text-align: center
 
 .second-pitch
-  p
-    +p(true)
+  padding:
+    top: $space * 3
+    bottom: $space * 3
 
   .feature
     +column('third')
@@ -243,4 +252,4 @@ footer.main
       +column(3)
 
   h1
-    +heading-sm
+    +heading-xs
