--- a/lib/sass/core/_grid.sass
+++ b/lib/sass/core/_grid.sass
@@ -43,8 +43,8 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
   @if $fluid == false
     max-width: $tablet
   padding:
-    left: 25px
-    right: 25px
+    left: $space
+    right: $space
 
   @if $fluid == false
     @media screen and (min-width: $showOffsets)
