--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -196,8 +196,8 @@ hr
 // Navigation
 // ----------
 
-=navbar($fluid: true, $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
-  +navbar-default($fluid, $background, $breakpoint, $collapse)
+=navbar($layout: 'fixed', $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+  +navbar-default($layout, $background, $breakpoint, $collapse)
 
 =dropdown_menu
   +dropdown_menu-default
