--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -196,7 +196,7 @@ hr
 // Navigation
 // ----------
 
-=navbar($layout: 'fixed', $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+=navbar($layout: 'none', $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   +navbar-default($layout, $background, $breakpoint, $collapse)
 
 =dropdown_menu
