--- a/rails/app/assets/stylesheets/kickstart_rails/components/_navbar.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_navbar.sass
@@ -4,7 +4,7 @@
   @else
     color: rgba(0, 0, 0, 0.5)
 
-=navbar-default($layout: 'fixed', $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
+=navbar-default($layout: 'none', $background: map-get($white, dark), $breakpoint: $tablet, $collapse: false)
   background: $background
   box-shadow: 0px 1px 0px darken($background, 12%) inset
   font-size: $default-font-size
@@ -13,7 +13,7 @@
   nav
     @if $layout == 'fluid'
       +container(true)
-    @else if $layout == 'fluid-fixed'
+    @else if $layout == 'fixed'
       +container(false)
     width: 100%
     border-radius: 0
@@ -46,7 +46,7 @@
       margin: 0
 
     @media screen and (min-width: $breakpoint)
-      @if $fluid == false
+      @if not $layout == 'none'
         > ul:first-child
           margin-left: (-1 * map-get($rootElement, paddingH))
 
