--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -34,7 +34,7 @@ html, body
     +column(8, 2, 2)
 
 .main-navigation
-  +navbar($fluid: false, $collapse: true)
+  +navbar($layout: 'fixed', $collapse: true)
 
   .logo
     height: 30px
@@ -43,7 +43,7 @@ html, body
     opacity: 0.8
 
 .docs-nav
-  +navbar($fluid: false, $background: darken(map-get($colors, blue), 5%), $collapse: true)
+  +navbar($layout: 'fixed', $background: darken(map-get($colors, blue), 5%), $collapse: true)
   margin:
     top: -$space
 
@@ -163,6 +163,11 @@ iframe.animation
 .example-column
   background-color: map-get($white, darkest)
   color: white
+
+// Images
+
+img
+  max-width: 100%
 
 // Modal
 
