--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -254,10 +254,10 @@
     +navbar($collapse: true)
 
   &.navbar-fluid
-    +navbar($layout: 'fluid')
+    +navbar-fluid
 
-  &.navbar-fixed
-    +navbar($layout: 'fixed')
+  &.navbar-fluid_fixed
+    +navbar-fluid_fixed
 
   &.navbar-dark
     +navbar($background: map-get($black, lighter))
